# repo-intelligence

./: .env.example  CHANGELOG.md  README.md  example.py  pyproject.toml
repo_intelligence/: __init__.py  cli.py  client.py  models.py  scorer.py
repo_intelligence/checks/: __init__.py  activity.py  ci.py
reporium_scoring/: config.py
reporium_scoring/checks/: community.py  readme.py
tests/: conftest.py  test_checks.py  test_cli.py  test_scorer.py
